# http_video_server

./: .gitignore  CMakeLists.txt  README.md
build-simple_http_streamer-Desktop-Default/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  streamer  streamer.cbp
include/http_video_server/: video_capture.h
simple_http_streamer/: CMakeLists.txt  main.cpp  main_tmp.cpp  tcp_connection.cpp  tcp_connection.h  video_capture.cpp  video_capture.h  video_server.cpp  video_server.h
src/: main.cpp  video_capture.cpp
